everything for docker now

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,4 +3,6 @@ EXPOSE 8000
 COPY ./src ./src
 COPY ./requirements.txt ./requirements.txt
 RUN python -m pip install -r ./requirements.txt
+RUN mkdir -p /data/db
+RUN mkdir -p /data/logs
 CMD ["python", "-m", "src"]
