--- a/.github/workflows/lint_and_test.yml
+++ b/.github/workflows/lint_and_test.yml
@@ -5,9 +5,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - run: cd backend
       - uses: ./.github/actions/manage_dependencies
         with:
+          paht: "backend"
           python-version: "3.10"
       - name: check black and mypy
         run: |
