--- a/.github/workflows/lint_and_test.yml
+++ b/.github/workflows/lint_and_test.yml
@@ -7,7 +7,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/manage_dependencies
         with:
-          paht: "backend"
+          path: "backend"
           python-version: "3.10"
       - name: check black and mypy
         run: |
