--- a/.github/workflows/lint_and_test.yml
+++ b/.github/workflows/lint_and_test.yml
@@ -16,8 +16,8 @@ jobs:
           python -m pip install -r requirements_dev.txt
       - name: check black and mypy
         run: |
-          python -m black --check src
-          python -m mypy src
+          python -m black --check backend/src
+          python -m mypy backend/src
 
   JS:
     runs-on: ubuntu-latest
