--- a/.github/workflows/lint_and_test.yml
+++ b/.github/workflows/lint_and_test.yml
@@ -14,6 +14,7 @@ jobs:
           cd backend
           python -m pip install -r requirements.txt
           python -m pip install -r requirements_dev.txt
+          python -m mypy --install-types
       - name: check black and mypy
         run: |
           python -m black --check backend/src
