--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,9 @@
     "react-router": "^7.6.3",
     "react-router-dom": "^7.6.3",
     "serve": "^14.2.4",
-    "vite": "^7.0.4"
+    "vite": "^7.0.4",
+    "prettier": "^3.6.2",
+    "eslint": "^9.30.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
