--- a/.github/workflows/lint_and_test.yml
+++ b/.github/workflows/lint_and_test.yml
@@ -5,15 +5,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: ./.github/actions/manage_dependencies
-        with:
-          path: "backend/"
-          python-version: "3.10"
-      # - name: manage dependencies
-      #   run: |
-      #     cd backend
-      #     python -m pip install -r requirements.txt
-      #     python -m pip install -r requirements_dev.txt
+      # - uses: ./.github/actions/manage_dependencies
+      #   with:
+      #     path: "backend/"
+      #     python-version: "3.10"
+      - name: manage dependencies
+        run: |
+          cd backend
+          python -m pip install -r requirements.txt
+          python -m pip install -r requirements_dev.txt
       - name: check black and mypy
         run: |
           python -m black --check backend/src
