--- a/.github/workflows/build_images.yml
+++ b/.github/workflows/build_images.yml
@@ -1,12 +1,39 @@
 name: Build Backend and Frontend Docker Images
-on: [push, workflow_dispatch, workflow_call]
+
+on:
+  release:
+    types: [created]
+  workflow_dispatch:
+
 jobs:
+  lint_and_test:
+    uses: ./.github/workflows/lint_and_test.yml
+
   build_backend:
+    name: Build Docker image for backend
+    needs: lint_and_test
     runs-on: ubuntu-latest
     steps:
       - run: echo "just sitting for now..."
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ vars.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Build and push
+        uses: docker/build-push-action@v6
+        with:
+          context: "{{defaultContext}}:backend"
+          push: true
+          tags: ${{ vars.DOCKERHUB_USERNAME }}/PolVolBackend:latest
 
-  builld_frontend:
+  build_frontend:
+    name: Build Docker image for frontend
+    needs: lint_and_test
     runs-on: ubuntu-latest
     steps:
       - run: echo "just sitting for now..."
