Testing docker image building.

--- a/.github/workflows/build_images.yml
+++ b/.github/workflows/build_images.yml
@@ -29,7 +29,7 @@ jobs:
         with:
           context: "{{defaultContext}}:backend"
           push: true
-          tags: ${{ vars.DOCKERHUB_USERNAME }}/PolVolBackend:latest
+          tags: ${{ vars.DOCKERHUB_USERNAME }}/polvol-backend:latest
 
   build_frontend:
     name: Build Docker image for frontend
