--- a/.github/workflows/build_images.yml
+++ b/.github/workflows/build_images.yml
@@ -37,3 +37,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: echo "just sitting for now..."
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ vars.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Build and push
+        uses: docker/build-push-action@v6
+        with:
+          context: "{{defaultContext}}:frontend"
+          push: true
+          tags: ${{ vars.DOCKERHUB_USERNAME }}/polvol-frontend:latest
