--- a/.github/workflows/build_images.yml
+++ b/.github/workflows/build_images.yml
@@ -14,7 +14,6 @@ jobs:
     needs: lint_and_test
     runs-on: ubuntu-latest
     steps:
-      - run: echo "just sitting for now..."
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
@@ -36,7 +35,6 @@ jobs:
     needs: lint_and_test
     runs-on: ubuntu-latest
     steps:
-      - run: echo "just sitting for now..."
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
@@ -52,3 +50,12 @@ jobs:
           context: "{{defaultContext}}:frontend"
           push: true
           tags: ${{ vars.DOCKERHUB_USERNAME }}/polvol-frontend:latest
+
+  release:
+    name: Release newest verion on Azure Container App
+    needs:
+      - build_backend
+      - build_frontend
+    runs-on: ubuntu-latest
+    steps:
+      - run: echo "just sitting for now..."
