--- a/.github/workflows/build_images.yml
+++ b/.github/workflows/build_images.yml
@@ -33,7 +33,7 @@ jobs:
         with:
           context: "{{defaultContext}}:backend"
           push: true
-          tags: ${{ vars.DOCKERHUB_USERNAME }}/polvol-backend:${{ inputs.backend_version }}
+          tags: ${{ vars.DOCKERHUB_USERNAME }}/polvol-backend:${{ inputs.backend_version }}, ${{ vars.DOCKERHUB_USERNAME }}/polvol-backend:latest
 
   build_frontend:
     name: Build Docker image for frontend
@@ -54,7 +54,7 @@ jobs:
         with:
           context: "{{defaultContext}}:frontend"
           push: true
-          tags: ${{ vars.DOCKERHUB_USERNAME }}/polvol-frontend:${{ inputs.frontend_version }}
+          tags: ${{ vars.DOCKERHUB_USERNAME }}/polvol-frontend:${{ inputs.frontend_version }}, ${{ vars.DOCKERHUB_USERNAME }}/polvol-frontend:latest
 
   release:
     name: Release newest verion on Azure Container App
